# Deode-meteoforcing

./: README.md  pyproject.toml
config/: deode_default.yaml  deode_msl_only.yaml  deode_rh2m_only.yaml  deode_sf_only.yaml  deode_sh2m_only.yaml  deode_sp_only.yaml  deode_ssrd_only.yaml  deode_strd_only.yaml  deode_t2_only.yaml  deode_tcc_only.yaml  deode_tp_only.yaml  deode_u10_only.yaml  deode_u4xcce_20251201.yaml  deode_v10_only.yaml  deode_wind10_only.yaml  grid_u4xcce_box_500m.txt  plot_locations.yaml
scripts/: derive_ah2m.py  make_cdo_grid.py  merge_forcing_day.py  plot_sanity.py  run_all_only.sh
src/deode_meteo/: cli.py  config.py  fetch.py  interpolate.py  pipeline.py  plotting.py  process.py
